Improvements to error handling and positions in AST