@@ -3,6 +3,7 @@ package io.github.mattidragon.jsonpatcher.server.document;
 import io.github.mattidragon.jsonpatcher.lang.PositionedException;
 import io.github.mattidragon.jsonpatcher.lang.parse.Lexer;
 import io.github.mattidragon.jsonpatcher.lang.parse.Parser;
+import io.github.mattidragon.jsonpatcher.lang.parse.PositionedToken;
 import io.github.mattidragon.jsonpatcher.lang.parse.SourceSpan;
 import io.github.mattidragon.jsonpatcher.lang.runtime.Program;
 import org.eclipse.lsp4j.*;
@@ -14,12 +15,11 @@ import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
 
-public class DocumentState implements AutoCloseable {
+public class DocumentState {
     private final String name;
     private final LanguageClient client;
 
-    private boolean closed = false;
-    private CompletableFuture<Result<Lexer.Result>> tokens = CompletableFuture.completedFuture(Result.empty());
+    private CompletableFuture<Result<List<PositionedToken>>> tokens = CompletableFuture.completedFuture(Result.empty());
     private CompletableFuture<Result<Program>> tree = CompletableFuture.completedFuture(Result.empty());
     
     public DocumentState(String name, LanguageClient client) {
@@ -29,24 +29,17 @@ public class DocumentState implements AutoCloseable {
 
     public void updateContent(String content) {
         tokens = CompletableFuture.supplyAsync(() -> {
-            Lexer.Result lexResult;
-            try {
-                lexResult = Lexer.lex(content, name);
-            } catch (Lexer.LexException e) {
-                return Result.fail(List.of(e));
-            }
-            return Result.success(lexResult);
-        });
-        tree = tokens.thenApply(lexResult -> {
+            var lexResult = Lexer.lex(content, name);
+            return Result.partial(lexResult.tokens(), Collections.unmodifiableList(lexResult.errors()));
+        }, DocumentManager.EXECUTOR);
+        tree = tokens.thenApplyAsync(lexResult -> {
             if (lexResult.result.isEmpty()) return Result.fail(lexResult.errors);
-            var parseResult = Parser.parse(lexResult.result.get().tokens());
-            return switch (parseResult) {
-                case Parser.Result.Success(var program, var metadata) -> 
-                        Result.success(program);
-                case Parser.Result.Fail(var program, var metadata, var errors) ->
-                        Result.partial(program, Collections.unmodifiableList(errors));
-            };
-        });
+            var parseResult = Parser.parse(lexResult.result.get());
+            
+            var combinedErrors = new ArrayList<PositionedException>(parseResult.errors());
+            combinedErrors.addAll(lexResult.errors);
+            return Result.partial(parseResult.program(), Collections.unmodifiableList(combinedErrors));
+        }, DocumentManager.EXECUTOR);
         tree.thenAcceptAsync(result -> {
             var errors = result.errors();
             var diagnostics = new ArrayList<Diagnostic>();
@@ -61,24 +54,19 @@ public class DocumentState implements AutoCloseable {
             }
 
             client.publishDiagnostics(new PublishDiagnosticsParams(name, diagnostics));
-        });
-    }
-
-    @Override
-    public void close() {
-        closed = true;
+        }, DocumentManager.EXECUTOR);
     }
 
     public CompletableFuture<SemanticTokens> getSemanticTokens() {
-        return tree.thenApply(result -> result.result.map(SemanticTokenizer::getTokens).orElseGet(SemanticTokens::new));
+        return tree.thenApplyAsync(result -> result.result.map(SemanticTokenizer::getTokens).orElseGet(SemanticTokens::new), DocumentManager.EXECUTOR);
     }
     
-    private static Range spanToRange(SourceSpan span) {
+    public static Range spanToRange(SourceSpan span) {
         var pos1 = new Position(span.from().row() - 1, span.from().column() - 1);
         var pos2 = new Position(span.to().row() - 1, span.to().column());
         return new Range(pos1, pos2);
     }
-    
+
     private record Result<T>(Optional<T> result, List<PositionedException> errors) {
         public static <T> Result<T> empty() {
             return new Result<>(Optional.empty(), List.of());
